<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#1C1E20"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:textColor="#FFFFFF"
        android:layout_height="wrap_content"
        android:text="@string/ipadress" />

    <EditText
        android:id="@+id/server_adress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="#FFFFFF" >

        <requestFocus />
    </EditText>
    
        <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFF"
        android:layout_height="wrap_content"
        android:text="@string/limtime" />

    <EditText
        android:id="@+id/limtime"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10" >
    </EditText>

    <Button
        android:id="@+id/save"
        android:textColor="#FFFFFF"
        android:layout_marginTop="50dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save" />

</LinearLayout>